Add capsule for multiplying and dividing fractions

--- a/capsules.html
+++ b/capsules.html
@@ -46,28 +46,28 @@
     <section class="capsules-hero">
       <p class="pill" style="display:inline-flex;align-items:center;gap:8px;background:rgba(34,197,94,0.12);color:#047857;font-weight:700;letter-spacing:.08em;text-transform:uppercase">🧠 Nou espai</p>
       <h1>Espai d'aprenentatge</h1>
-      <p>Explora càpsules amb explicacions pas a pas, animacions i activitats autocorrectives per preparar-te abans d'afrontar els exàmens. Ara pots reforçar la divisió i la resta portant, i molt aviat arribaran més temes!</p>
+      <p>Explora càpsules amb explicacions pas a pas, animacions i activitats autocorrectives per preparar-te abans d'afrontar els exàmens. Ara pots practicar la suma de fraccions amb denominadors diferents i la multiplicació/divisió simbòlica, i molt aviat arribaran més temes!</p>
     </section>
 
     <section aria-labelledby="capsules-list">
       <h2 id="capsules-list" class="sr-only">Càpsules disponibles</h2>
       <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px">
-        <a class="capsule-card" href="capsula-divisio.html">
-          <span class="capsule-tag">Divisió</span>
-          <h3 class="capsule-title"><span>➗</span>Divisió europea, pas a pas</h3>
-          <p class="capsule-copy">Comprèn la divisió llarga amb teoria visual, animacions lentes i molta pràctica autocorrectiva.</p>
+        <a class="capsule-card" href="capsula-suma-fraccions.html">
+          <span class="capsule-tag">Fraccions</span>
+          <h3 class="capsule-title"><span>➕</span>Suma de fraccions (denominadors diferents)</h3>
+          <p class="capsule-copy">Aprèn a trobar el MCM, fer equivalències i sumar fraccions pas a pas amb visuals i activitats autocorrectives.</p>
           <div class="capsule-meta">
-            <span>4 sessions guiades</span>
+            <span>Itinerari visual complet</span>
             <span aria-hidden="true">Comença →</span>
           </div>
         </a>
-        <a class="capsule-card" href="capsula-resta.html">
-          <span class="capsule-tag">Resta portant</span>
-          <h3 class="capsule-title"><span>➖</span>Domina la resta amb préstecs</h3>
-          <p class="capsule-copy">Repàs complet de la resta portant: explica les descomposicions, practica amb pistes visuals i supera la prova final.</p>
+        <a class="capsule-card" href="capsula-multiplicacio-divisio-fraccions.html">
+          <span class="capsule-tag">Fraccions</span>
+          <h3 class="capsule-title"><span>✚</span>Multiplicació i divisió de fraccions</h3>
+          <p class="capsule-copy">Rep l'estratègia simbòlica per multiplicar i dividir fraccions, amb animacions pas a pas, pràctica guiada i joc de 5 preguntes.</p>
           <div class="capsule-meta">
-            <span>4 sessions guiades</span>
-            <span aria-hidden="true">Comença →</span>
+            <span>Format llibre + pràctica</span>
+            <span aria-hidden="true">Obre la càpsula →</span>
           </div>
         </a>
         <div class="empty-state" aria-live="polite">
