--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="learning-icon" aria-hidden="true">🃏</div>
       <div class="learning-body">
         <p class="learning-kicker">Nova pràctica</p>
-        <h3 class="learning-title">Flashcards d'estudi</h3>
+        <h3 class="learning-title">Flashcards d'estudi (en construcció)</h3>
         <p class="learning-copy">Accedeix al menú complet de targetes amb repetició espaiada, notes i estadístiques.</p>
       </div>
       <span class="learning-pill">Entrar →</span>
