--- a/index.html
+++ b/index.html
@@ -76,54 +76,56 @@
   <main class="wrap">
     <!-- HOME -->
     <section id="view-home" class="hero">
-  <div class="panel card">
-    <h2 class="title">Benvingut/da! 👋</h2>
-    <p class="subtitle">Tria un mòdul per configurar-lo i començar. Tot queda guardat en aquest dispositiu (sense comptes).</p>
+      <div class="panel card">
+        <h2 class="title">Benvingut/da! 👋</h2>
+        <p class="subtitle">Tria un mòdul per configurar-lo i començar. Tot queda guardat en aquest dispositiu (sense comptes).</p>
 
-    <div id="moduleGrid"></div>
+        <div id="moduleGrid"></div>
 
-   <!-- 🧠 Consell del tutor -->
-<div id="recommendation" class="panel card tutor-card">
-  <h3 class="title tutor-title">Consell del teu tutor virtual 🤖</h3>
-  <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
-</div>
+        <!-- 🧠 Consell del tutor -->
+        <div id="recommendation" class="panel card tutor-card">
+          <h3 class="title tutor-title">Consell del teu tutor virtual 🤖</h3>
+          <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
+        </div>
 
-    <a class="learning-card" href="capsules.html">
-      <div class="learning-icon" aria-hidden="true">🎓</div>
-      <div class="learning-body">
-        <p class="learning-kicker">Nou espai</p>
-        <h3 class="learning-title">Espai d'aprenentatge</h3>
-        <p class="learning-copy">Accedeix a càpsules guiades per practicar pas a pas abans de fer els exàmens.</p>
+        <a class="learning-card" href="capsules.html">
+          <div class="learning-icon" aria-hidden="true">🎓</div>
+          <div class="learning-body">
+            <p class="learning-kicker">Nou espai</p>
+            <h3 class="learning-title">Espai d'aprenentatge</h3>
+            <p class="learning-copy">Accedeix a càpsules guiades per practicar pas a pas abans de fer els exàmens.</p>
+          </div>
+          <span class="learning-pill">Entrar →</span>
+        </a>
+
+        <a class="learning-card" href="flashcards.html">
+          <div class="learning-icon" aria-hidden="true">🃏</div>
+          <div class="learning-body">
+            <p class="learning-kicker">Nova pràctica</p>
+            <h3 class="learning-title">Flashcards d'estudi</h3>
+            <p class="learning-copy">Accedeix al menú complet de targetes amb repetició espaiada, notes i estadístiques.</p>
+          </div>
+          <span class="learning-pill">Entrar →</span>
+        </a>
+
+        <script>
+          document.addEventListener('DOMContentLoaded', () => {
+            // 🔹 Mostra recomanació del tutor
+            showRecommendation('#recommendationText');
+
+            // 🔹 Mostra l'usuari actiu (si n'hi ha)
+            const current = localStorage.getItem('lastStudent');
+            const badge = document.getElementById('activeUser');
+            if (badge) {
+              const label = badge.querySelector('.label');
+              if (label) label.textContent = current || 'Sessió no iniciada';
+              badge.classList.toggle('is-empty', !current);
+            }
+
+          });
+        </script>
       </div>
-      <span class="learning-pill">Entrar →</span>
-    </a>
-
-    <a class="learning-card" href="flashcards.html">
-      <div class="learning-icon" aria-hidden="true">🃏</div>
-      <div class="learning-body">
-        <p class="learning-kicker">Nova pràctica</p>
-        <h3 class="learning-title">Flashcards d'estudi</h3>
-        <p class="learning-copy">Accedeix al menú complet de targetes amb repetició espaiada, notes i estadístiques.</p>
-      </div>
-      <span class="learning-pill">Entrar →</span>
-    </a>
-
-    <script>
-    document.addEventListener('DOMContentLoaded', ()=>{
-  // 🔹 Mostra recomanació del tutor
-  showRecommendation('#recommendationText');
-
-  // 🔹 Mostra l'usuari actiu (si n'hi ha)
-  const current = localStorage.getItem('lastStudent');
-  const badge = document.getElementById('activeUser');
-  if (badge) {
-    const label = badge.querySelector('.label');
-    if (label) label.textContent = current || 'Sessió no iniciada';
-    badge.classList.toggle('is-empty', !current);
-  }
-
-});
-</script>
+    </section>
     <!-- CONFIG -->
     <section id="view-config" class="hidden">
       <div class="panel card">
